--- a/src/app/Painel-Administrativo/sidebar-administrativo/sidebar-administrativo.component.html
+++ b/src/app/Painel-Administrativo/sidebar-administrativo/sidebar-administrativo.component.html
@@ -18,7 +18,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/categorias.html" class="nav-link">
+                <a [routerLink]="['/administrativo/categoria']"class="nav-link">
                   <i class="nav-icon fas fa-list-alt"></i>
                   <p>
                     Categorias
