add login struct

--- a/src/app/Painel-Administrativo/sidebar-administrativo/sidebar-administrativo.component.html
+++ b/src/app/Painel-Administrativo/sidebar-administrativo/sidebar-administrativo.component.html
@@ -1,39 +1,47 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <a href="index3.html" class="brand-link">
-      <i class="fas fa-home"></i>
-      <span class="brand-text font-weight-light"> VagnãoStore</span>
-      <br>
-      
-    </a>
-    
-    <div class="sidebar">
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-               <li class="nav-item">
-                <a href="pages/clientes.html" class="nav-link">
-                  <i class="nav-icon fas fa-user"></i>
-                  <p>
-                    Clientes
-                  </p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a [routerLink]="['/administrativo/categoria']"class="nav-link">
-                  <i class="nav-icon fas fa-list-alt"></i>
-                  <p>
-                    Categorias
-                  </p>
-                </a>
-              </li>
-          <li class="nav-item">
-            <a href="pages/produtos.html" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
-              <p>
-                Produtos
-              </p>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </aside>
+  <a href="index3.html" class="brand-link">
+    <i class="fas fa-home"></i>
+    <span class="brand-text font-weight-light"> VagnãoStore</span>
+    <br>
+
+  </a>
+
+  <div class="sidebar">
+    <nav class="mt-2">
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+        <li class="nav-item">
+          <a href="pages/clientes.html" class="nav-link">
+            <i class="nav-icon fas fa-user"></i>
+            <p>
+              Clientes
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['/administrativo/categoria']" class="nav-link">
+            <i class="nav-icon fas fa-list-alt"></i>
+            <p>
+              Categorias
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="pages/produtos.html" class="nav-link">
+            <i class="nav-icon fas fa-th"></i>
+            <p>
+              Produtos
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['/administrativo/usuarios']"class="nav-link">
+            <i class="nav-icon fas fa-list-alt"></i>
+            <p>
+              Usuários
+            </p>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</aside>
