--- a/src/app/Site-Vendas/footer-venda/footer-venda.component.css
+++ b/src/app/Site-Vendas/footer-venda/footer-venda.component.css
@@ -1,11 +1,4 @@
-
-body{
-	margin:0;
-	padding:0;
-	background:#fff;
-	font-family: 'Noto Sans', sans-serif;
- }
-body a{
+ a{
 	transition:0.5s all;
 	-webkit-transition:0.5s all;
 	-moz-transition:0.5s all;
@@ -19,10 +12,7 @@ h1,h2,h3,h4,h5,h6{
 p,label{
 	margin:0;
 }
-ul{
-	margin:0;
-	padding:0;
-}
+
 
 .footer-bottom {
     text-align: center;
@@ -57,47 +47,10 @@ ul{
     top: 16px;
     left:-5px;
 }
- p.fo-para {
-    font-size: 1em;
-    line-height: 2em;
-    color: #fff;
-    padding: 0em 0 3em;
-    width: 70%;
-    margin: 0 auto;
-}
-.social-fo li{
-	list-style-type:none;
-	display:inline-block;
-	margin:0 5px;
-}
-.social-fo li a {
-    width: 35px;
-	height: 35px;
-    display: block;
-    background: #3B5998;
-    border-radius: 100px;
-    color: #fff;
-    line-height: 2.2em;
-}
-.social-fo li a:hover{
-    transition: 0.45s;
-   transform: rotate(360deg) ;
-}
-.social-fo li a.twi{
-    background: #4099FF;
-}
-.social-fo li a.pin {
-    background: #CD2830;
-}
-.social-fo li a.dri {
-    background:#E35E90;
-}
-
 .footer {
     background: #353535;
-    padding: 2em 0;
-    margin-top:5%;
-    
+    padding: 1.1em 0;
+    margin-top:16%;
 }
 
 .footer-grid {
