--- a/src/app/Site-Vendas/footer-venda/footer-venda.component.html
+++ b/src/app/Site-Vendas/footer-venda/footer-venda.component.html
@@ -1,52 +1,13 @@
-<!--footer-->
-
-<style>
-	
-</style>
 <div class="footer">
 	<div class="container">
-		<div class="col-md-3 footer-grid">
-			<h3>Sobre a loja</h3>
-			<p>Esta loja foi criada com o objetivo de ajudar o youtuber Vagnão Araraquara a poder vender seus produtos de forma virtual.</p>
-		</div>
-		<div class="col-md-3 footer-grid ">
-			<h3>Menu</h3>
-			<ul>
-				<li><a href="index.html">Inicio</a></li>
-				<li><a href="Tacos.html">Tacos</a></li>
-				<li><a href="Mesas.html">Mesas</a></li>
-				<li><a href="#">...</a></li>
-			
-				
-				
-			</ul>
-		</div>
-		<div class="col-md-3 footer-grid">
-			<h3>Minha Conta</h3>
-			<ul>
-				<li><a href="login.html">Login</a></li>
-				<li><a href="register.html">Cadastrar-se</a></li>
-				
-				
-			</ul>
+		<div class="clearfix"></div>
+		<div class="footer-bottom">
+			<h2><a [routerLink]="['/']">Vagnao Store<span>A Melhor Loja Virtual De Bilhar</span></a></h2>
+			<p class="fo-para"></p>
 		</div>
 		<div class="clearfix"></div>
-			<div class="footer-bottom">
-				<h2 ><a href="index.html"><b>V<br>S<br>E</b>Vagnao Store<span>A Melhor Loja Virtual De Bilhar</span></a></h2>
-            <p class="fo-para"></p>
-				<ul class="social-fo">
-					<li><a href="#" class="face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-					<li><a href="#" class="twi"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-					<li><a href="#" class="dri"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-				</ul>
-			</div>	
-				<div class="clearfix"></div>
-					
-					
-			</div>
-		<div class="copy-right">
-			<p><a> &copy;2020 Vagnao Store</a></p>
-		</div>
 	</div>
-
-<!-- //footer-->
+	<div class="copy-right">
+		<p><a> &copy;2020 Vagnao Store</a></p>
+	</div>
+</div>
