--- a/src/app/Site-Vendas/header-venda/header-venda.component.html
+++ b/src/app/Site-Vendas/header-venda/header-venda.component.html
@@ -4,30 +4,17 @@
     <div class="container">
 
         <div class="logo">
-            <h1><a href="index.html"><b>V<br>S<br>E</b>Vagnao Store<span>A Melhor Loja Virtual De Bilhar</span></a></h1>
+            <h1><a [routerLink]="['/']">Vagnao Store<span>A Melhor Loja Virtual De Bilhar</span></a></h1>
         </div>
         <div class="head-t">
             <ul class="li">
 
-                <li><a href="login.html"><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
-                <li><a href="register.html"><i class="fa fa-arrow-right" aria-hidden="true"></i>Cadastrar-se</a></li>
-                <li><a href="about.html"><i class="fa fa-file-text-o" aria-hidden="true"></i>Sobre</a></li>
-                <li><a href="contato.html"><i class="fa fa-phone" aria-hidden="true"></i>Contato</a></li>
+                <li><a routerLink="/login"><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
+                <li><a routerLink="/login/registrar"><i class="fa fa-arrow-right" aria-hidden="true"></i>Cadastrar-se</a></li>
+
             </ul>
 
         </div>
-
-        <div class="header-ri">
-            <ul class="social-top">
-                <li><a href="#" class="icon facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a>
-                </li>
-                <li><a href="#" class="icon twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a>
-                </li>
-                <li><a href="#" class="icon dribbble"><i class="fa fa-youtube" aria-hidden="true"></i><span></span></a>
-                </li>
-            </ul>
-        </div>
-
 
         <input type="checkbox" id="bt_menu" />
         <label for="bt_menu">&#9776;</label>
@@ -51,13 +38,6 @@
 
             </ul>
         </nav>
-
-
-
-
-
-
-
         <div class="clearfix"></div>
     </div>
 
