--- a/src/app/commum/login-registrar/registrar-login.component.html
+++ b/src/app/commum/login-registrar/registrar-login.component.html
@@ -13,11 +13,8 @@
                             <label for="senha" class="text-center">Senha </label><br>
                             <input type="password" name="senha" id="senha" class="form-control" formControlName="senha">
                         </div>
-                        <div *ngIf="statusResponse == 304">
-                            <label class="text-center">{{messageApi}}</label><br>
-                        </div>
                         <div class="form-group">
-                            <input type="submit" class="btn btn-success btn-block" value="Entrar">
+                            <input type="submit" class="btn btn-success btn-block" value="Concluir">
                         </div>
                     </form>
                 </div>
