--- a/src/app/commum/login-registrar/registrar-login.component.css
+++ b/src/app/commum/login-registrar/registrar-login.component.css
@@ -1,13 +1,8 @@
-body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-}
 
 #login .container #login-row #login-column #login-box {
-    margin-top: 120px;
-    max-width: 600px;
-    height: 320px;  
+    margin-top: 30%;
+    max-width: 100%;
+    height: 70%;   
     box-shadow: 0px 0px 10px black;
     border-radius: 20px;
     background-color: ffffe0;
@@ -23,3 +18,7 @@ body {
     margin-top: -10px;
 }
 
+.botao{
+    text-align: end;
+    margin-right: 3%;
+}
