post usuarios administrativo

--- a/src/app/Painel-Administrativo/usuarios/listar-usuarios/listar-usuarios.component.html
+++ b/src/app/Painel-Administrativo/usuarios/listar-usuarios/listar-usuarios.component.html
@@ -2,6 +2,7 @@
     <app-header-administrativo></app-header-administrativo>
     <app-sidebar-administrativo></app-sidebar-administrativo>
     <div class="content-wrapper marginTopBottomContentContainerAdmin">
+        <br>
         <div class="container-fluid marginTopBottomContentContainerAdmin">
             <div>
                 <div class="row">
@@ -10,19 +11,23 @@
                     </div>
                     <div class="col-sm-6 positionButtons">
                         <button type="button" class="btn btn-outline-success btn-sm botao"
-                            [routerLink]="['/']">Adicionar</button>
+                            [routerLink]="['/administrativo/usuarios/adicionar']">Adicionar</button>
                     </div>
                 </div>
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
+                                <th>Nome</th>
                                 <th>Email</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let usuario of login">
+                                <th scope="row">
+                                    <span>{{usuario.nome}}</span>
+                                </th>
                                 <th scope="row">
                                     <span>{{usuario.email}}</span>
                                 </th>
