--- a/src/app/Painel-Administrativo/usuarios/adicionar-usuarios/adicionar-usuarios.component.css
+++ b/src/app/Painel-Administrativo/usuarios/adicionar-usuarios/adicionar-usuarios.component.css
@@ -1,7 +1,10 @@
 .marginTopBottomContentContainerAdmin{
+    background-color:white;
+}
+
+.marginContentContainerAdmin{
     margin-left: 5%;
     margin-right: 5%;
-    background-color: white;
 }
 
 .positionTitle {
@@ -10,4 +13,7 @@
 
 .positionButtons {
     text-align: end;
+}
+.content-wrapper{
+    background-color: white !important;
 }
