--- a/src/app/Painel-Administrativo/sidebar-administrativo/sidebar-administrativo.component.html
+++ b/src/app/Painel-Administrativo/sidebar-administrativo/sidebar-administrativo.component.html
@@ -26,7 +26,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/administrativo/produtos']" class="nav-link">
+          <a href="pages/produtos.html" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
               Produtos
