ajustes no login e registrar usuario

--- a/src/app/Painel-Administrativo/usuarios/listar-usuarios/listar-usuarios.component.html
+++ b/src/app/Painel-Administrativo/usuarios/listar-usuarios/listar-usuarios.component.html
@@ -7,7 +7,7 @@
             <div>
                 <div class="row">
                     <div class="col-sm-6 positionTitle">
-                        <h5>Usuários</h5>
+                        <h5>Usuários administrativo</h5>
                     </div>
                     <div class="col-sm-6 positionButtons">
                         <button type="button" class="btn btn-outline-success btn-sm botao"
