--- a/src/app/Painel-Administrativo/usuarios/listar-usuarios/listar-usuarios.component.html
+++ b/src/app/Painel-Administrativo/usuarios/listar-usuarios/listar-usuarios.component.html
@@ -32,7 +32,7 @@
                                     <span>{{usuario.email}}</span>
                                 </th>
                                 <th (click)="$event.stopPropagation()">
-                                    <button class="btn btn-outline-warning btn-sm">Editar</button>&nbsp;
+                                    <button class="btn btn-outline-warning btn-sm" [routerLink]="['/administrativo/usuarios/editar', usuario['email']]">Editar</button>&nbsp;
                                     <button class="btn btn-outline-danger btn-sm" (click)="canDelete(usuario['nome'], usuario['id'],usuario['idLogin'])" > Excluir</button>
                                 </th>
                             </tr>
