criacao do adicionar categoria no administrativo

--- a/src/app/Painel-Administrativo/categorias/listar-categorias/listar-categorias.component.html
+++ b/src/app/Painel-Administrativo/categorias/listar-categorias/listar-categorias.component.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="col-sm-6 positionButtons">
                         <button type="button" class="btn btn-outline-success btn-sm botao"
-                            [routerLink]="['/']">Adicionar</button>
+                            [routerLink]="['/administrativo/categorias/adicionar']">Adicionar</button>
                     </div>
                 </div>
                 <div class="table-responsive">
