--- a/src/app/Painel-Administrativo/produtos-administrativo/listar-produtos/listar-produtos.component.css
+++ b/src/app/Painel-Administrativo/produtos-administrativo/listar-produtos/listar-produtos.component.css
@@ -20,3 +20,13 @@ text-align: center;
 button{
     margin:2%;
 }
+
+
+.pointer {
+    cursor: pointer;
+}
+
+.hoverRowTable:hover {
+    background-color: rgb(245, 245, 245);
+    color: rgb(43, 50, 82)
+}
