--- a/src/app/Painel-Administrativo/categorias/listar-categorias/listar-categorias.component.html
+++ b/src/app/Painel-Administrativo/categorias/listar-categorias/listar-categorias.component.html
@@ -27,9 +27,9 @@
                                     <span>{{categoria.nome}}</span>
                                     
                                 </th>
-                                <th>
-                                    <button class="btn btn-outline-warning btn-sm">Editar</button>
-                                    <button class="btn btn-outline-danger btn-sm"> Excluir</button>
+                                <th (click)="$event.stopPropagation()">
+                                    <button class="btn btn-outline-warning btn-sm" [routerLink]="['/administrativo/categorias/editar', categoria['id']]">Editar</button>&nbsp;
+                                    <button class="btn btn-outline-danger btn-sm" (click)="deleteCategorias(categoria)" > Excluir</button>
                                 </th>
                             </tr>
                         </tbody>
