--- a/src/app/Site-Vendas/header-venda/header-venda.component.html
+++ b/src/app/Site-Vendas/header-venda/header-venda.component.html
@@ -19,8 +19,7 @@
         <input type="checkbox" id="bt_menu" />
         <label for="bt_menu">&#9776;</label>
         <div class="cart">
-
-            <span class="fa fa-shopping-cart my-cart-icon"><span class="badge badge-notify my-cart-badge"></span></span>
+            <span routerLink="/login" class="fa fa-shopping-cart my-cart-icon"><span class="badge badge-notify my-cart-badge" >{{quantidadeItens}}</span></span>
         </div>
         <nav class="menu">
             <ul >
@@ -57,7 +56,7 @@
                         <h6>R$ {{produto.preco}}</h6>
                     </div>
                     <div class="add add-2">
-                        <button class="btn btn-danger my-cart-btn my-cart-b" >Adicionar ao Carrinho</button>
+                        <button class="btn btn-danger my-cart-btn my-cart-b" (click)="adicionarCarrinho(produto)">Adicionar ao Carrinho</button>
                     </div>
                 </div>
             </div>
