listar carrinho de compra

--- a/src/app/Painel-Administrativo/usuarios/listar-usuarios/listar-usuarios.component.html
+++ b/src/app/Painel-Administrativo/usuarios/listar-usuarios/listar-usuarios.component.html
@@ -6,7 +6,7 @@
         <div class="container-fluid marginTopBottomContentContainerAdmin">
             <div>
                 <div class="row">
-                    <div class="col-sm-6 positionTitle">
+                    <div class="col-sm-6">
                         <h5>Usuários administrativo</h5>
                     </div>
                     <div class="col-sm-6 positionButtons">
@@ -38,7 +38,6 @@
                             </tr>
                         </tbody>
                     </table>
-
                 </div>
             </div>
         </div>
